search result string too long breaks layout: fixed

--- a/app/css/_form.scss
+++ b/app/css/_form.scss
@@ -63,7 +63,7 @@
 
 .form-element{
   &.search{
-    min-width: 400px;
+    min-width: 500px;
     z-index: 200;
 
     input{
