--- a/app/css/_search-results.scss
+++ b/app/css/_search-results.scss
@@ -33,6 +33,7 @@
     }
 
     .name{
+      padding: 0 5px 0 0;
       font-size: 14px;
       font-weight: bold;
       width: 53%;
@@ -46,6 +47,19 @@
       text-align: center;
       background-color: #f2f2f2;
       border-radius: 5px;
+    }
+    @media(max-width: 500px){
+      padding-top: 20px;
+      min-height: 60px;
+
+      .number, .name{
+        padding: 4px 0 0 0;
+        font-size: 12px;
+        line-height: 1;
+      }
+      .name{
+        padding: 4px 10px 0 0;
+      }
     }
   }
 
